[package]
name = "firestore-path"
version = "0.4.0"
authors = ["bouzuya <m@bouzuya.net>"]
description = "A Firestore path helper"
edition = "2021"
exclude = [".github", "docs"]
keywords = ["firestore", "gcloud", "google", "path"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bouzuya/firestore-path"

[dependencies]
thiserror = "1.0.51"

[dev-dependencies]
anyhow = "1.0.76"
google-api-proto = { version = "1.449.0", features = ["google-firestore-v1"] }

# <https://doc.rust-lang.org/cargo/reference/manifest.html#the-lints-section>
[lints.rust]
missing_docs = "deny"

# <https://doc.rust-lang.org/rustdoc/lints.html>
[lints.rustdoc]
all = "deny"
