[package]
name = "firestore-path"
version = "1.0.3"
authors = ["bouzuya <m@bouzuya.net>"]
description = "A Firestore path helper"
edition = "2021"
exclude = [".github", "docs"]
keywords = ["firestore", "gcloud", "google", "path"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bouzuya/firestore-path"

[dependencies]
thiserror = "2"

[dev-dependencies]
anyhow = "1"
googleapis-tonic-google-firestore-v1 = { version = "0.15.0", default-features = false, features = ["bytes", "btree-map"] }

# <https://doc.rust-lang.org/cargo/reference/manifest.html#the-lints-section>
[lints.rust]
missing_docs = "deny"

# <https://doc.rust-lang.org/rustdoc/lints.html>
[lints.rustdoc]
all = "deny"
